--- a/Diplomapp/Diplomapp/Diplomapp/Views/ProjectPage.xaml
+++ b/Diplomapp/Diplomapp/Diplomapp/Views/ProjectPage.xaml
@@ -13,15 +13,20 @@
     <TabbedPage.Behaviors>
         <xtc:EventToCommandBehavior EventName="Appearing" Command="{Binding initialize}"/>
     </TabbedPage.Behaviors>
+    
   <!--Pages can be added as references or inline-->
     <ContentPage Title="Информация о проекте"  >
-    
+        <ContentPage.Resources>
+            <ResourceDictionary>
+                <xtc:ItemSelectedEventArgsConverter x:Key="ItemSelectedEventArgsConverter"/>
+            </ResourceDictionary>
+        </ContentPage.Resources>
         <ContentPage.Content>
-            <StackLayout>
+            <StackLayout Margin="10">
                 <Label Text="{Binding Name}"/>
                 <Entry Text="{Binding Description}" />
                 <StackLayout>
-                    <Label Text=" Aims of project"/>
+
                     <Label Text="{Binding ProjectInfo.ProjectAims}"/>
                     <Label Text="{Binding ProjectInfo.ProjectsBudjet }"/>
                     <Label Text="{Binding ProjectInfo.Zakazchik}"/>
@@ -30,7 +35,20 @@
                     <Label Text=" EndDate"/>
                     <Label Text="{Binding ProjectInfo.EndTime}"/>
                 </StackLayout>
-                <Button Text=" " Command="{Binding Pick}"/>
+                <Button Text="Добавить файл в проект" Command="{Binding Pick}"/>
+                <ListView  ItemsSource="{Binding ProjectFiles}">
+                    <ListView.Behaviors>
+                        <xtc:EventToCommandBehavior EventName="ItemSelected" Command="{Binding Selectfiletodownload}"  EventArgsConverter="{StaticResource ItemSelectedEventArgsConverter}"/>
+                    </ListView.Behaviors>
+                    <ListView.ItemTemplate>
+                        
+                        <DataTemplate>
+                            <ViewCell>
+                                <Label Text="{Binding Name}" />
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackLayout>
         </ContentPage.Content>
     </ContentPage>
