--- a/Diplomapp/Diplomapp/Diplomapp/Views/InvitesPage.xaml
+++ b/Diplomapp/Diplomapp/Diplomapp/Views/InvitesPage.xaml
@@ -14,7 +14,7 @@
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout>
-            <Label HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="You dont have any invites" IsVisible="{Binding Empty} "/>
+            <Label HorizontalOptions="CenterAndExpand" Margin="0,10,0,0" Text="You dont have any invites" IsVisible="{Binding Empty} "/>
             <ListView 
                 RefreshCommand="{Binding command}"
                  ItemsSource="{Binding Invites }">
