--- a/Diplomapp/Diplomapp/Diplomapp/Views/MainPage.xaml
+++ b/Diplomapp/Diplomapp/Diplomapp/Views/MainPage.xaml
@@ -23,54 +23,56 @@
     
     
     <ContentPage.Content>
-        <ListView HasUnevenRows="True" 
-                  CachingStrategy="RecycleElement"
-                  ItemsSource = "{Binding ProjectGroups}"
-                  BackgroundColor="Transparent"
-                  IsGroupingEnabled="True"
-                  SeparatorVisibility="None"
-                  IsPullToRefreshEnabled="True"
-                  ItemTapped ="ListView_ItemTapped"
-                  ItemSelected="ListView_ItemSelected"
-                  RefreshCommand="{Binding command}">
+        <StackLayout>
+            <Label HorizontalOptions="CenterAndExpand" Text= "У вас пока нет проектов" IsVisible="{Binding Empty}" Margin="0,10,0,0"/>
+            <ListView HasUnevenRows="True" 
+                      CachingStrategy="RecycleElement"
+                      ItemsSource = "{Binding ProjectGroups}"
+                      BackgroundColor="Transparent"
+                      IsGroupingEnabled="True"
+                      SeparatorVisibility="None"
+                      IsPullToRefreshEnabled="True"
+                      ItemTapped ="ListView_ItemTapped"
+                      ItemSelected="ListView_ItemSelected"
+                      RefreshCommand="{Binding command}">
             
-            <ListView.GroupHeaderTemplate>
-                <DataTemplate x:DataType = "{x:Null}">
-                    <ViewCell>
-                        <StackLayout Orientation="Horizontal" >
-                            <Label  Text="{Binding Key}" Margin="15,0,0,0"/>
-                        </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.GroupHeaderTemplate>
+                <ListView.GroupHeaderTemplate>
+                    <DataTemplate x:DataType = "{x:Null}">
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal" >
+                                <Label  Text="{Binding Key}" Margin="15,0,0,0"/>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.GroupHeaderTemplate>
             
             
             
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell x:DataType="model:Project" >
-                        <ViewCell.ContextActions>
-                            <MenuItem Text = " favorite " />
-                            <MenuItem Text = " Delete " />
-                        </ViewCell.ContextActions>
-                        <StackLayout>
-                            <Frame  CornerRadius="20" BorderColor="Gray" Margin="10,5,10,5" >
-                                <StackLayout>
-                                    <Label  Text="{Binding Name}"/>
-                                    <Label Margin="10,10,0,0" Text="{Binding Description}"/>
-                                </StackLayout>
-                            </Frame>
-                        </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell x:DataType="model:Project" >
+                            <ViewCell.ContextActions>
+                                <MenuItem Text = " favorite " />
+                                <MenuItem Text = " Delete " />
+                            </ViewCell.ContextActions>
+                            <StackLayout>
+                                <Frame  CornerRadius="20" BorderColor="Gray" Margin="10,5,10,5" >
+                                    <StackLayout>
+                                        <Label  Text="{Binding Name}"/>
+                                        <Label Margin="10,10,0,0" Text="{Binding Description}"/>
+                                    </StackLayout>
+                                </Frame>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             
-            <ListView.Footer>
-                <StackLayout>
-                    <Button Command = "{Binding command}" Text="Обновить"/>
-                </StackLayout>
-            </ListView.Footer>
-        </ListView>
-        
+                <ListView.Footer>
+                    <StackLayout>
+                        <Button Command = "{Binding command}" Text="Обновить"/>
+                    </StackLayout>
+                </ListView.Footer>
+            </ListView>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
