--- a/Diplomapp/Diplomapp/Diplomapp/Views/TasksPage.xaml
+++ b/Diplomapp/Diplomapp/Diplomapp/Views/TasksPage.xaml
@@ -19,7 +19,7 @@
     </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
-            <Label HorizontalOptions="CenterAndExpand" IsVisible="{Binding Empty}" Text="You dont have any tasks yet" />
+            <Label HorizontalOptions="CenterAndExpand" Margin="0,10,0,0" IsVisible="{Binding Empty}" Text="You dont have any tasks yet" />
             <ListView IsGroupingEnabled="True" ItemsSource="{Binding GroupedProblems}"
                     >
                 <ListView.Behaviors>
